"corpo" do projeto sem conteúdo ainda

--- a/index.html
+++ b/index.html
@@ -4,9 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Projeto Traveller</title>
 </head>
 <body>
-    
+    <div class="caixa1">
+        <div class="conteudo-titulo">
+            <span class="titulo">Iara</span>
+        </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Cristo Redentor</h3>
+        <p>
+            Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut 
+            labore et dolore magna aliqua. 
+        </p>
+    </div>
+
+    <div class="caixa2">
+        <div class="conteudo-titulo">
+            <span class="titulo">Boto cor de rosa</span>
+        </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Corcovado</h3>
+        <p>
+            Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut 
+            labore et dolore magna aliqua. 
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut 
+            labore et dolore magna aliqua. 
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut 
+            labore et dolore magna aliqua. 
+        </p>
+    </div>
+
+    <div class="caixa3">
+        <div class="conteudo-titulo">
+            <span class="titulo">cuca</span>
+        </div>
+    </div>
+
+    <div class="caixa4">
+        <div class="conteudo-titulo">
+            <span class="titulo">corpo seco</span>
+        </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Pão de açucar</h3>
+        <p>
+            Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut 
+            labore et dolore magna aliqua. 
+        </p>
+    </div>
+
+    <div class="caixa5">
+        <div class="conteudo-titulo">
+            <span class="titulo">saci</span>
+        </div>
+    </div>
+
+    <div class="caixa6">
+        <div class="conteudo-titulo">
+            <span class="titulo">curupira</span>
+        </div>
+    </div>
 </body>
 </html>
