--- a/index.html
+++ b/index.html
@@ -10,33 +10,44 @@
 <body>
     <div class="caixa1">
         <div class="conteudo-titulo">
-            <span class="titulo">Iara</span>
+            <span class="titulo">Pontos Turísticos da série Cidade Invisível</span>
         </div>
     </div>
 
     <div class="conteudo">
-        <h3>Cristo Redentor</h3>
+        <h3>O Saci em Santa Teresa</h3>
         <p>
-            Lorem ipsum dolor sit amet, 
-            consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut 
-            labore et dolore magna aliqua. 
+            Santa Teresa é um bairro próximo ao Centro do Rio, 
+            conhecido por suas ladeiras íngremes e casarões antigos. 
+            Além das pequenas ruas de pedra e ótima vista para outros 
+            bairros da cidade, Santa Teresa é um lugar diferente: 
+            mesmo próximo do agito do centro, conserva uma certa tranquilidade. 
+            O grande diferencial do bairro é que os bondes são um importante 
+            meio de transporte para os moradores e turistas que transitam pela região. 
+        </p>
+        <p>
+            Quando for visitar o lugar, aproveite para conhecer o Museu Chácara do Céu, 
+            o Parque das Ruínas e admirar a vista que o morro oferece. 
         </p>
     </div>
 
     <div class="caixa2">
         <div class="conteudo-titulo">
-            <span class="titulo">Boto cor de rosa</span>
+            <span class="titulo">Saci</span>
         </div>
     </div>
 
     <div class="conteudo">
-        <h3>Corcovado</h3>
+        <h3>A Lagoa da Iara</h3>
         <p>
-            Lorem ipsum dolor sit amet, 
-            consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut 
-            labore et dolore magna aliqua. 
+            Rodrigo de Freitas é uma lagoa localizada na Zona Sul do município do Rio de Janeiro, no Brasil. 
+            Embora receba as águas de diversos rios tributários que descem das encostas circundantes, 
+            entre os quais se destaca o Rio dos Macacos, apresenta águas salobras.
+            A lagoa apresenta duas ilhas: Ilha Piraquê, na margem oeste,que abriga o Departamento 
+            Esportivo do Clube Naval; Ilha Caiçaras, na margem sul, que abriga o Clube dos Caiçaras, 
+            onde se realizaram as provas de esqui aquático dos Jogos Pan-Americanos de 2007. 
+            Conta ainda com alguns parques ao seu redor, dos quais se destacam o Parque da Catacumba, 
+            o Parque do Cantagalo e o Parque dos Patins. 
         </p>
         <p>
             Lorem ipsum dolor sit amet, 
@@ -54,7 +65,7 @@
 
     <div class="caixa3">
         <div class="conteudo-titulo">
-            <span class="titulo">cuca</span>
+            <span class="titulo">Iara</span>
         </div>
     </div>
 
@@ -65,12 +76,22 @@
     </div>
 
     <div class="conteudo">
-        <h3>Pão de açucar</h3>
+        <h3>Corpo Seco escondido na Floresta da Tijuca</h3>
         <p>
-            Lorem ipsum dolor sit amet, 
-            consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut 
-            labore et dolore magna aliqua. 
+            A floresta da Tijuca contemporânea é em grande parte resultado do reflorestamento . 
+            No século XVIII, as florestas ao redor do Rio de Janeiro foram derrubadas para 
+            combustível, cultivo de café e gado. Infelizmente, os pequenos riachos na antiga 
+            floresta eram uma fonte significativa de abastecimento de água da cidade e, 
+            com chuvas variáveis, a cidade começou a sofrer escassez de água e enchentes 
+            repentinas . 
+        </p>
+        <p>
+            O imperador Pedro II do Brasil estabeleceu o controle federal sobre a área em 1861, 
+            e os esforços começaram para restaurar a antiga floresta nas encostas nuas e campos abandonados. 
+            O replantio de árvores foi efetuado pelo Major Manuel Gomes Archer na segunda metade do século XIX, 
+            com mais de 100.000 árvores plantadas de 1861 a 1887. Por volta dessa época, foi construída 
+            uma ferrovia para transportar passageiros até o topo do Corcovado e, entre 1922 e 1931, 
+            a famosa estátua do Cristo Redentor foi construída.
         </p>
     </div>
 
