--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         </div>
     </div>
 
+    <div class="caixa2">
+        <div class="conteudo-titulo">
+            <span class="titulo">Saci - pererê e seu gorro vermelho</span>
+        </div>
+    </div>
+
     <div class="conteudo">
         <h3>O Saci em Santa Teresa</h3>
         <p>
@@ -31,9 +37,9 @@
         </p>
     </div>
 
-    <div class="caixa2">
+    <div class="caixa3">
         <div class="conteudo-titulo">
-            <span class="titulo">Saci</span>
+            <span class="titulo">Iara - metade sereia, metade mulher</span>
         </div>
     </div>
 
@@ -63,15 +69,9 @@
         </p>
     </div>
 
-    <div class="caixa3">
-        <div class="conteudo-titulo">
-            <span class="titulo">Iara</span>
-        </div>
-    </div>
-
     <div class="caixa4">
         <div class="conteudo-titulo">
-            <span class="titulo">corpo seco</span>
+            <span class="titulo">Corpo Seco - o defunto rejeitado</span>
         </div>
     </div>
 
@@ -97,14 +97,72 @@
 
     <div class="caixa5">
         <div class="conteudo-titulo">
-            <span class="titulo">saci</span>
+            <span class="titulo">Curupira - o protetor das florestas</span>
         </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Parque Lage e o Curupira</h3>
+        <p>
+            O Parque Lage do Rio de Janeiro está localizado aos pés do Morro do Corcovado 
+            e encanta com seus 52 hectares de puro verde, programas culturais e arte. 
+        </p>
+        <p>
+            Sua estrutura é bem bonita, sem contar a paisagem cercada de muito verde 
+            e animais nativos da Mata Atlântica. O parque tem entrada gratuita, 
+            inclusive para os vários macaquinhos que livremente transitam por lá.
+        </p>
     </div>
 
     <div class="caixa6">
         <div class="conteudo-titulo">
-            <span class="titulo">curupira</span>
+            <span class="titulo">Boto - o belo jovem</span>
         </div>
     </div>
+
+    <div class="conteudo">
+        <h3>Praia do Flamengo - onde o boto se esconde</h3>
+        <p>
+            Uma praia grande em extensão, de onde podemos ter uma bela vista para cidade de
+            Niterói e do Pão de Açúcar.  Em toda a sua orla encontra-se o aterro do Flamengo,
+            lugar no qual podemos fazer diversas atividades físicas, esportivas e até mesmo culturais,
+            frequentemente utilizado para exibição de eventos musicais. Praia banhada com o
+            mar da Baia da Guanabara e por isso nem sempre apropriada para banho. 
+        </p>
+        <p>
+            No mar temos eventos esportivos como o GP Brasil de motonáutica e no ar também
+            fazem por lá o Air Race, uma espécie de corrida de aviões com malabarismos espetaculares.
+            Esta praia com certeza é uma praia cheia de atrações pela sua posição estratégica
+            perto do centro da cidade.
+        </p>
+    </div>
+
+    <div class="caixa7">
+        <div class="conteudo-titulo">
+            <span class="titulo">Cuca - a bruxa</span>
+        </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Lapa, o lugar preferido da Cuca</h3>
+        <p>
+            A Lapa é um bairro carioca onde você vai encontrar muitos bares, 
+            baladas, além de alguns pontos turísticos do Rio de Janeiro.
+            Assim, o bairro é um reduto para quem quer curtir um pouco, principalmente 
+            a noite quando a Avenida Mem de Sá se transforma com muita agitação dos bares e baladas.
+        </p>
+        <p>
+            Aliás, o bairro carioca ficou conhecido no início do século 
+            passado como a “Montmartre Brasileira”, devido ao conjunto 
+            de cabarés, cassinos, malandros, artistas, prostitutas e 
+            intelectuais do local.
+        </p>
+        <p>
+            Mas atualmente, ele é muito procurado por quem quer curtir um pouco da 
+            vida noturna no Rio de Janeiro. Assim, o bairro traz um charme de antiguidade 
+            com seus casarões do tempo colonial onde funcionam os bares, baladas e restaurantes.
+        </p>
+    </div>
+    
 </body>
 </html>
