editei os parágrafos

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
         <p>
             Santa Teresa é um bairro próximo ao Centro do Rio, 
             conhecido por suas ladeiras íngremes e casarões antigos. 
+        </p>
+        <p>
             Além das pequenas ruas de pedra e ótima vista para outros 
             bairros da cidade, Santa Teresa é um lugar diferente: 
             mesmo próximo do agito do centro, conserva uma certa tranquilidade. 
+        </p>
+        <p>
             O grande diferencial do bairro é que os bondes são um importante 
-            meio de transporte para os moradores e turistas que transitam pela região. 
+            meio de transporte para os moradores e turistas que transitam pela região.
         </p>
         <p>
             Quando for visitar o lugar, aproveite para conhecer o Museu Chácara do Céu, 
@@ -49,23 +53,16 @@
             Rodrigo de Freitas é uma lagoa localizada na Zona Sul do município do Rio de Janeiro, no Brasil. 
             Embora receba as águas de diversos rios tributários que descem das encostas circundantes, 
             entre os quais se destaca o Rio dos Macacos, apresenta águas salobras.
+        </p>
+        <p>
             A lagoa apresenta duas ilhas: Ilha Piraquê, na margem oeste,que abriga o Departamento 
             Esportivo do Clube Naval; Ilha Caiçaras, na margem sul, que abriga o Clube dos Caiçaras, 
             onde se realizaram as provas de esqui aquático dos Jogos Pan-Americanos de 2007. 
+            
+        </p>
+        <p>
             Conta ainda com alguns parques ao seu redor, dos quais se destacam o Parque da Catacumba, 
-            o Parque do Cantagalo e o Parque dos Patins. 
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, 
-            consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut 
-            labore et dolore magna aliqua. 
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, 
-            consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut 
-            labore et dolore magna aliqua. 
+            o Parque do Cantagalo e o Parque dos Patins.
         </p>
     </div>
 
@@ -80,7 +77,10 @@
         <p>
             A floresta da Tijuca contemporânea é em grande parte resultado do reflorestamento . 
             No século XVIII, as florestas ao redor do Rio de Janeiro foram derrubadas para 
-            combustível, cultivo de café e gado. Infelizmente, os pequenos riachos na antiga 
+            combustível, cultivo de café e gado. 
+        </p>
+        <p>
+            Infelizmente, os pequenos riachos na antiga 
             floresta eram uma fonte significativa de abastecimento de água da cidade e, 
             com chuvas variáveis, a cidade começou a sofrer escassez de água e enchentes 
             repentinas . 
@@ -89,7 +89,10 @@
             O imperador Pedro II do Brasil estabeleceu o controle federal sobre a área em 1861, 
             e os esforços começaram para restaurar a antiga floresta nas encostas nuas e campos abandonados. 
             O replantio de árvores foi efetuado pelo Major Manuel Gomes Archer na segunda metade do século XIX, 
-            com mais de 100.000 árvores plantadas de 1861 a 1887. Por volta dessa época, foi construída 
+            com mais de 100.000 árvores plantadas de 1861 a 1887. 
+        </p>
+        <p>
+            Por volta dessa época, foi construída 
             uma ferrovia para transportar passageiros até o topo do Corcovado e, entre 1922 e 1931, 
             a famosa estátua do Cristo Redentor foi construída.
         </p>
@@ -176,13 +179,17 @@
             O Arpoador é uma praia e também uma formação rochosa, 
             ambos no bairro de Ipanema. Possui uma área de praia pequena 
             com cerca de 500m de comprimento, portanto o espaço é restrito. 
+        </p>
+        <p>
             Cazuza já cantava “vago na lua deserta das pedras do Arpoador”, 
             fazendo referência a este local mágico com uma paisagem deslumbrante. 
             Tire alguns minutos da sua visita ao local para subir nas pedras que ficam 
             do lado esquerdo e contemplar não somente a vista, como também o pôr do sol. 
+        </p>
+        <p>
             É de arrepiar!
         </p>
     </div>
-    
+
 </body>
 </html>
