links de "saiba mais"

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             Quando for visitar o lugar, aproveite para conhecer o Museu Chácara do Céu, 
             o Parque das Ruínas e admirar a vista que o morro oferece. 
         </p>
+        <p>
+            <a href="https://freewalkertours.com/pt-br/santa-teresa-rio-de-janeiro/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+        </p>
     </div>
 
     <div class="caixa3">
@@ -63,6 +66,9 @@
         <p>
             Conta ainda com alguns parques ao seu redor, dos quais se destacam o Parque da Catacumba, 
             o Parque do Cantagalo e o Parque dos Patins.
+        </p>
+        <p>
+            <a href="https://s2rio.com.br/o-que-fazer-na-lagoa-rodrigo-de-freitas/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
         </p>
     </div>
 
@@ -96,6 +102,9 @@
             uma ferrovia para transportar passageiros até o topo do Corcovado e, entre 1922 e 1931, 
             a famosa estátua do Cristo Redentor foi construída.
         </p>
+        <p>
+            <a href="https://formaconhecer.com.br/saida/rj-parque-nacional-da-tijuca-floresta-da-tijuca/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+        </p>
     </div>
 
     <div class="caixa5">
@@ -114,6 +123,9 @@
             Sua estrutura é bem bonita, sem contar a paisagem cercada de muito verde 
             e animais nativos da Mata Atlântica. O parque tem entrada gratuita, 
             inclusive para os vários macaquinhos que livremente transitam por lá.
+        </p>
+        <p>
+            <a href="https://www.minube.com.br/sitio-preferido/parque-lage-a8331" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
         </p>
     </div>
 
@@ -137,6 +149,9 @@
             fazem por lá o Air Race, uma espécie de corrida de aviões com malabarismos espetaculares.
             Esta praia com certeza é uma praia cheia de atrações pela sua posição estratégica
             perto do centro da cidade.
+        </p>
+        <p>
+            <a href="https://www.praias-360.com.br/rio-de-janeiro/rio-de-janeiro/praia-do-flamengo" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
         </p>
     </div>
 
@@ -165,6 +180,9 @@
             vida noturna no Rio de Janeiro. Assim, o bairro traz um charme de antiguidade 
             com seus casarões do tempo colonial onde funcionam os bares, baladas e restaurantes.
         </p>
+        <p>
+            <a href="https://freewalkertours.com/pt-br/lapa-rio-de-janeiro/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+        </p>
     </div>
 
     <div class="caixa8">
@@ -188,6 +206,9 @@
         </p>
         <p>
             É de arrepiar!
+        </p>
+        <p>
+            <a href="https://www.tevejopelomundo.com.br/por-do-sol-no-arpoador/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
         </p>
     </div>
 
