--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Projeto Traveller</title>
 </head>
+
 <body>
     <div class="caixa1">
         <div class="conteudo-titulo">
@@ -23,25 +25,36 @@
     <div class="conteudo">
         <h3>O Saci em Santa Teresa</h3>
         <p>
-            Santa Teresa é um bairro próximo ao Centro do Rio, 
-            conhecido por suas ladeiras íngremes e casarões antigos. 
+            Santa Teresa é um bairro próximo ao Centro do Rio, conhecido por suas ladeiras íngremes e casarões antigos.
         </p>
         <p>
-            Além das pequenas ruas de pedra e ótima vista para outros 
-            bairros da cidade, Santa Teresa é um lugar diferente: 
-            mesmo próximo do agito do centro, conserva uma certa tranquilidade. 
+            Além das pequenas ruas de pedra e ótima vista para outros bairros da cidade, Santa Teresa é um lugar
+            diferente: mesmo próximo do agito do centro, conserva uma certa tranquilidade.
         </p>
         <p>
-            O grande diferencial do bairro é que os bondes são um importante 
-            meio de transporte para os moradores e turistas que transitam pela região.
+            O grande diferencial do bairro é que os bondes são um importante meio de transporte para os moradores e
+            turistas que transitam pela região.
         </p>
         <p>
-            Quando for visitar o lugar, aproveite para conhecer o Museu Chácara do Céu, 
-            o Parque das Ruínas e admirar a vista que o morro oferece. 
+            Quando for visitar o lugar, aproveite para conhecer o Museu Chácara do Céu, o Parque das Ruínas e admirar a
+            vista que o morro oferece.
         </p>
         <p>
-            <a href="https://freewalkertours.com/pt-br/santa-teresa-rio-de-janeiro/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+            <a href="https://freewalkertours.com/pt-br/santa-teresa-rio-de-janeiro/" target="_blank"
+                rel="noopener noreferrer">Saiba mais...</a>
         </p>
+        <div class="imagens">
+            <img src="/imagens/StaTeresa/arcos-de-lapa-bonde.jpg" alt="Bonde nos Arcos da Lapa">
+            <img src="/imagens/StaTeresa/escada-santa-teresa.jpg" alt="Escada de Santa Teresa">
+            <img src="/imagens/StaTeresa/largo-do-guimaraes.jpg" alt="Largo do Guimarães">
+            <img src="/imagens/StaTeresa/santa-teresa.jpg" alt="Bairro de Santa Teresa">
+        </div>
+        <div class="mapa">
+            <p>Como chegar: </p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14851.137635194726!2d-43.19426768258571!3d-22.926295911352582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fbbf0688d6b%3A0xc444f12c61c36e0!2sSanta%20Teresa%2C%20Rio%20de%20Janeiro%20-%20State%20of%20Rio%20de%20Janeiro!5e0!3m2!1sen!2sbr!4v1617229226728!5m2!1sen!2sbr"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </div>
 
     <div class="caixa3">
@@ -53,23 +66,35 @@
     <div class="conteudo">
         <h3>A Lagoa da Iara</h3>
         <p>
-            Rodrigo de Freitas é uma lagoa localizada na Zona Sul do município do Rio de Janeiro, no Brasil. 
-            Embora receba as águas de diversos rios tributários que descem das encostas circundantes, 
-            entre os quais se destaca o Rio dos Macacos, apresenta águas salobras.
+            Rodrigo de Freitas é uma lagoa localizada na Zona Sul do município do Rio de Janeiro, no Brasil. Embora
+            receba as águas de diversos rios tributários que descem das encostas circundantes, entre os quais se destaca
+            o Rio dos Macacos, apresenta águas salobras.
         </p>
         <p>
-            A lagoa apresenta duas ilhas: Ilha Piraquê, na margem oeste,que abriga o Departamento 
-            Esportivo do Clube Naval; Ilha Caiçaras, na margem sul, que abriga o Clube dos Caiçaras, 
-            onde se realizaram as provas de esqui aquático dos Jogos Pan-Americanos de 2007. 
-            
+            A lagoa apresenta duas ilhas: Ilha Piraquê, na margem oeste, que abriga o Departamento Esportivo do Clube
+            Naval; Ilha Caiçaras, na margem sul, que abriga o Clube dos Caiçaras, onde se realizaram as provas de esqui
+            aquático dos Jogos Pan-Americanos de
+            2007.
+
         </p>
         <p>
-            Conta ainda com alguns parques ao seu redor, dos quais se destacam o Parque da Catacumba, 
-            o Parque do Cantagalo e o Parque dos Patins.
+            Conta ainda com alguns parques ao seu redor, dos quais se destacam o Parque da Catacumba, o Parque do
+            Cantagalo e o Parque dos Patins.
         </p>
         <p>
-            <a href="https://s2rio.com.br/o-que-fazer-na-lagoa-rodrigo-de-freitas/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+            <a href="https://s2rio.com.br/o-que-fazer-na-lagoa-rodrigo-de-freitas/" target="_blank"
+                rel="noopener noreferrer">Saiba mais...</a>
         </p>
+        <div class="imagens">
+            <img src="/imagens/Lagoa/lagoa1.jpg" alt="">
+            <img src="/imagens/Lagoa/lagoa2.jpg" alt="">
+            <img src="/imagens/Lagoa/lagoa3.jpeg" alt="">
+            <img src="/imagens/Lagoa/lagoa4.jpg" alt="">
+        </div>
+        <div class="mapa">
+            <p>Como chegar:</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21448.112970474445!2d-43.219816762920516!3d-22.972063033770645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd574afbc853f%3A0x20a26959ca6918cd!2sRodrigo%20de%20Freitas%20Lagoon!5e0!3m2!1sen!2sbr!4v1617230900797!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </div>
 
     <div class="caixa4">
@@ -81,30 +106,37 @@
     <div class="conteudo">
         <h3>Corpo Seco escondido na Floresta da Tijuca</h3>
         <p>
-            A floresta da Tijuca contemporânea é em grande parte resultado do reflorestamento . 
-            No século XVIII, as florestas ao redor do Rio de Janeiro foram derrubadas para 
-            combustível, cultivo de café e gado. 
+            A floresta da Tijuca contemporânea é em grande parte resultado do reflorestamento .  No século XVIII, as
+            florestas ao redor do Rio de Janeiro foram derrubadas para combustível, cultivo de café e gado.
         </p>
         <p>
-            Infelizmente, os pequenos riachos na antiga 
-            floresta eram uma fonte significativa de abastecimento de água da cidade e, 
-            com chuvas variáveis, a cidade começou a sofrer escassez de água e enchentes 
-            repentinas . 
+            Infelizmente, os pequenos riachos na antiga floresta eram uma fonte significativa de abastecimento de água
+            da cidade e, com chuvas variáveis, a cidade começou a sofrer escassez de água e enchentes repentinas .
         </p>
         <p>
-            O imperador Pedro II do Brasil estabeleceu o controle federal sobre a área em 1861, 
-            e os esforços começaram para restaurar a antiga floresta nas encostas nuas e campos abandonados. 
-            O replantio de árvores foi efetuado pelo Major Manuel Gomes Archer na segunda metade do século XIX, 
-            com mais de 100.000 árvores plantadas de 1861 a 1887. 
+            O imperador Pedro II do Brasil estabeleceu o controle federal sobre a área em 1861, e os esforços começaram
+            para restaurar a antiga floresta nas encostas nuas e campos abandonados.  O replantio de árvores foi
+            efetuado pelo Major Manuel Gomes Archer na
+            segunda metade do século XIX, com mais de 100.000 árvores plantadas de 1861 a 1887.
         </p>
         <p>
-            Por volta dessa época, foi construída 
-            uma ferrovia para transportar passageiros até o topo do Corcovado e, entre 1922 e 1931, 
-            a famosa estátua do Cristo Redentor foi construída.
+            Por volta dessa época, foi construída  uma ferrovia para transportar passageiros até o topo do Corcovado e,
+            entre 1922 e 1931, a famosa estátua do Cristo Redentor foi construída.
         </p>
         <p>
-            <a href="https://formaconhecer.com.br/saida/rj-parque-nacional-da-tijuca-floresta-da-tijuca/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+            <a href="https://formaconhecer.com.br/saida/rj-parque-nacional-da-tijuca-floresta-da-tijuca/"
+                target="_blank" rel="noopener noreferrer">Saiba mais...</a>
         </p>
+        <div class="imagens">
+            <img src="/imagens/Floresta/floresta1.jpg" alt="">
+            <img src="/imagens/Floresta/floresta2.jpg" alt="">
+            <img src="/imagens/Floresta/floresta3.jpg" alt="">
+            <img src="/imagens/Floresta/floresta4.jpg" alt="">
+        </div>
+        <div class="mapa">
+            <p>Como chegar:</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77554.77489397104!2d-43.28920026306178!3d-22.9444850879389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fd5c89b3ae3%3A0x46b0bd9b029f14fc!2sTijuca%20National%20Park!5e0!3m2!1sen!2sbr!4v1617231390205!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </div>
 
     <div class="caixa5">
@@ -116,17 +148,28 @@
     <div class="conteudo">
         <h3>Parque Lage e o Curupira</h3>
         <p>
-            O Parque Lage do Rio de Janeiro está localizado aos pés do Morro do Corcovado 
-            e encanta com seus 52 hectares de puro verde, programas culturais e arte. 
+            O Parque Lage do Rio de Janeiro está localizado aos pés do Morro do Corcovado e encanta com seus 52 hectares
+            de puro verde, programas culturais e arte.
         </p>
         <p>
-            Sua estrutura é bem bonita, sem contar a paisagem cercada de muito verde 
-            e animais nativos da Mata Atlântica. O parque tem entrada gratuita, 
-            inclusive para os vários macaquinhos que livremente transitam por lá.
+            Sua estrutura é bem bonita, sem contar a paisagem cercada de muito verde e animais nativos da Mata
+            Atlântica. O parque tem entrada gratuita, inclusive para os vários macaquinhos que livremente transitam por
+            lá.
         </p>
         <p>
-            <a href="https://www.minube.com.br/sitio-preferido/parque-lage-a8331" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+            <a href="https://www.minube.com.br/sitio-preferido/parque-lage-a8331" target="_blank"
+                rel="noopener noreferrer">Saiba mais...</a>
         </p>
+        <div class="imagens">
+            <img src="/imagens/Parque/parque1.jpg" alt="">
+            <img src="/imagens/Parque/parque2.jpg" alt="">
+            <img src="/imagens/Parque/parque3.jpg" alt="">
+            <img src="/imagens/Parque/parque4.jpg" alt="">
+        </div>
+        <div class="mapa">
+            <p>Como chegar:</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.784739754601!2d-43.21383158503333!3d-22.95815348498573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd5783c4b0e7f%3A0x24e4aac202dbc423!2sParque%20Lage!5e0!3m2!1sen!2sbr!4v1617231457383!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </div>
 
     <div class="caixa6">
@@ -142,7 +185,7 @@
             Niterói e do Pão de Açúcar.  Em toda a sua orla encontra-se o aterro do Flamengo,
             lugar no qual podemos fazer diversas atividades físicas, esportivas e até mesmo culturais,
             frequentemente utilizado para exibição de eventos musicais. Praia banhada com o
-            mar da Baia da Guanabara e por isso nem sempre apropriada para banho. 
+            mar da Baia da Guanabara e por isso nem sempre apropriada para banho.
         </p>
         <p>
             No mar temos eventos esportivos como o GP Brasil de motonáutica e no ar também
@@ -151,8 +194,19 @@
             perto do centro da cidade.
         </p>
         <p>
-            <a href="https://www.praias-360.com.br/rio-de-janeiro/rio-de-janeiro/praia-do-flamengo" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+            <a href="https://www.praias-360.com.br/rio-de-janeiro/rio-de-janeiro/praia-do-flamengo" target="_blank"
+                rel="noopener noreferrer">Saiba mais...</a>
         </p>
+        <div class="imagens">
+            <img src="/imagens/Flamengo/flamengo1.jpg" alt="">
+            <img src="/imagens/Flamengo/flamengo2.jpeg" alt="">
+            <img src="/imagens/Flamengo/flamengo3.jpg" alt="">
+            <img src="/imagens/Flamengo/flamengo4.jpg" alt="">
+        </div>
+        <div class="mapa">
+            <p>Como chegar:</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7349.14896892427!2d-43.175290802164604!3d-22.929060611309005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99802b14fba5f7%3A0x5426b86c5424083b!2sPraia%20do%20Flamengo!5e0!3m2!1sen!2sbr!4v1617231999243!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </div>
 
     <div class="caixa7">
@@ -164,25 +218,35 @@
     <div class="conteudo">
         <h3>Lapa, o lugar preferido da Cuca</h3>
         <p>
-            A Lapa é um bairro carioca onde você vai encontrar muitos bares, 
-            baladas, além de alguns pontos turísticos do Rio de Janeiro.
-            Assim, o bairro é um reduto para quem quer curtir um pouco, principalmente 
-            a noite quando a Avenida Mem de Sá se transforma com muita agitação dos bares e baladas.
+            A Lapa é um bairro carioca onde você vai encontrar muitos bares, baladas, além de alguns pontos turísticos
+            do Rio de Janeiro. Assim, o bairro é um reduto para quem quer curtir um pouco, principalmente a noite quando
+            a Avenida Mem de Sá se transforma com
+            muita agitação dos bares e baladas.
         </p>
         <p>
-            Aliás, o bairro carioca ficou conhecido no início do século 
-            passado como a “Montmartre Brasileira”, devido ao conjunto 
-            de cabarés, cassinos, malandros, artistas, prostitutas e 
-            intelectuais do local.
+            Aliás, o bairro carioca ficou conhecido no início do século passado como a “Montmartre Brasileira”, devido
+            ao conjunto de cabarés, cassinos, malandros, artistas, prostitutas e intelectuais do local.
         </p>
         <p>
-            Mas atualmente, ele é muito procurado por quem quer curtir um pouco da 
-            vida noturna no Rio de Janeiro. Assim, o bairro traz um charme de antiguidade 
-            com seus casarões do tempo colonial onde funcionam os bares, baladas e restaurantes.
+            Mas atualmente, ele é muito procurado por quem quer curtir um pouco da vida noturna no Rio de Janeiro.
+            Assim, o bairro traz um charme de antiguidade com seus casarões do tempo colonial onde funcionam os bares,
+            baladas e restaurantes.
         </p>
         <p>
-            <a href="https://freewalkertours.com/pt-br/lapa-rio-de-janeiro/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+            <a href="https://freewalkertours.com/pt-br/lapa-rio-de-janeiro/" target="_blank"
+                rel="noopener noreferrer">Saiba mais...</a>
         </p>
+        <div class="imagens">
+            <img src="/imagens/lapa/lapa1.jpg" alt="">
+            <img src="/imagens/lapa/lapa2.jpg" alt="">
+            <img src="/imagens/lapa/lapa3.png" alt="">
+            <img src="/imagens/lapa/lapa4.jpg" alt="">
+
+        </div>
+        <div class="mapa">
+            <p>Como chegar:</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7349.996714315641!2d-43.18576997664068!3d-22.913431440033563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f64dc03b62f%3A0x2ff8d3e000f0638e!2sLapa%20-%20Santa%20Teresa%2C%20Rio%20de%20Janeiro%20-%20State%20of%20Rio%20de%20Janeiro!5e0!3m2!1sen!2sbr!4v1617232042586!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </div>
 
     <div class="caixa8">
@@ -194,23 +258,34 @@
     <div class="conteudo">
         <h3>Arpoador - a praia do Tutu Marambá</h3>
         <p>
-            O Arpoador é uma praia e também uma formação rochosa, 
-            ambos no bairro de Ipanema. Possui uma área de praia pequena 
-            com cerca de 500m de comprimento, portanto o espaço é restrito. 
+            O Arpoador é uma praia e também uma formação rochosa, ambos no bairro de Ipanema. Possui uma área de praia
+            pequena com cerca de 500m de comprimento, portanto o espaço é restrito.
         </p>
         <p>
-            Cazuza já cantava “vago na lua deserta das pedras do Arpoador”, 
-            fazendo referência a este local mágico com uma paisagem deslumbrante. 
-            Tire alguns minutos da sua visita ao local para subir nas pedras que ficam 
-            do lado esquerdo e contemplar não somente a vista, como também o pôr do sol. 
+            Cazuza já cantava “vago na lua deserta das pedras do Arpoador”, fazendo referência a este local mágico com
+            uma paisagem deslumbrante. Tire alguns minutos da sua visita ao local para subir nas pedras que ficam do
+            lado esquerdo e contemplar não somente
+            a vista, como também o pôr do sol.
         </p>
         <p>
             É de arrepiar!
         </p>
         <p>
-            <a href="https://www.tevejopelomundo.com.br/por-do-sol-no-arpoador/" target="_blank" rel="noopener noreferrer">Saiba mais...</a>
+            <a href="https://www.tevejopelomundo.com.br/por-do-sol-no-arpoador/" target="_blank"
+                rel="noopener noreferrer">Saiba mais...</a>
         </p>
+        <div class="imagens">
+            <img src="/imagens/arpoador/arpoador1.jpg" alt="">
+            <img src="/imagens/arpoador/arpoador2.jpg" alt="">
+            <img src="/imagens/arpoador/arpoador3.jpg" alt="">
+            <img src="/imagens/arpoador/arpoador4.jpg" alt="">
+        </div>
+        <div class="mapa">
+            <p>Como chegar:</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7345.91561873245!2d-43.19849127502046!3d-22.98857888988097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd51b432fdc95%3A0x721eea5331e0fda1!2sArpoador!5e0!3m2!1sen!2sbr!4v1617232753229!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </div>
 
 </body>
+
 </html>
